samples/_failures_safe/1761406217_236236_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37b75ebd.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_37b75ebd.c:154:19: error: expected ‘;’ at end of input
  154 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_37b75ebd.c:154:13: error: expected declaration or statement at end of input
  154 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_37b75ebd.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_37b75ebd.c:154:13: error: expected declaration or statement at end of input
